--- a/HollerUp/HollerUp/Base.lproj/LaunchScreen.storyboard
+++ b/HollerUp/HollerUp/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="lFO-uG-S8E">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Launch Logo" translatesAutoresizingMaskIntoConstraints="NO" id="lFO-uG-S8E">
                                 <rect key="frame" x="62.5" y="208.5" width="250" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="250" id="9vU-Gb-wmr"/>
@@ -26,7 +26,7 @@
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.047058823530000002" green="0.71372549019999998" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="lFO-uG-S8E" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="A0U-wi-bJv"/>
                             <constraint firstItem="lFO-uG-S8E" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="wYW-Jh-sbF"/>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Logo" width="341.5" height="341.5"/>
+        <image name="Launch Logo" width="170.5" height="231"/>
     </resources>
 </document>
