--- a/HollerUp/HollerUp/XIBS/Profile/ProfileDetailsCell.xib
+++ b/HollerUp/HollerUp/XIBS/Profile/ProfileDetailsCell.xib
@@ -24,7 +24,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="49.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Empty" translatesAutoresizingMaskIntoConstraints="NO" id="ivA-hK-WU5">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mobile" translatesAutoresizingMaskIntoConstraints="NO" id="ivA-hK-WU5">
                         <rect key="frame" x="15" y="10" width="30" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="30" id="WHs-LU-1tQ">
@@ -78,6 +78,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Empty" width="160" height="160"/>
+        <image name="Mobile" width="29" height="29"/>
     </resources>
 </document>
