-> Edit Profile Implementing

--- a/HollerUp/HollerUp/XIBS/Appointment Cell/RejectPopUpOptions.xib
+++ b/HollerUp/HollerUp/XIBS/Appointment Cell/RejectPopUpOptions.xib
@@ -123,6 +123,7 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="FE1-YI-nca">
                     <rect key="frame" x="30" y="162" width="260" height="185"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="separatorColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </tableView>
                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="HAB-ed-0lP">
                     <rect key="frame" x="0.0" y="355" width="320" height="45"/>
