--- a/HollerUp/HollerUp/XIBS/Appointment Cell/RejectOptionsCell.xib
+++ b/HollerUp/HollerUp/XIBS/Appointment Cell/RejectOptionsCell.xib
@@ -24,15 +24,15 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="29.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Empty" highlightedImage="Edit" translatesAutoresizingMaskIntoConstraints="NO" id="XeJ-IJ-pOa">
-                        <rect key="frame" x="8" y="5" width="20" height="20"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Radio_Off" highlightedImage="Radio_On" translatesAutoresizingMaskIntoConstraints="NO" id="XeJ-IJ-pOa">
+                        <rect key="frame" x="8" y="7.5" width="15" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="20" id="9yR-Fv-KMX"/>
-                            <constraint firstAttribute="width" constant="20" id="wRE-Oq-WBD"/>
+                            <constraint firstAttribute="height" constant="15" id="9yR-Fv-KMX"/>
+                            <constraint firstAttribute="width" constant="15" id="wRE-Oq-WBD"/>
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="I am not avaibale" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cz6-HG-Vi4">
-                        <rect key="frame" x="36" y="6.5" width="274" height="17"/>
+                        <rect key="frame" x="31" y="6.5" width="279" height="17"/>
                         <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -41,6 +41,7 @@
                         </variation>
                     </label>
                 </subviews>
+                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="cz6-HG-Vi4" secondAttribute="trailing" constant="10" id="Jal-iY-Rl6"/>
                     <constraint firstItem="XeJ-IJ-pOa" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Nph-iO-9Dg"/>
@@ -58,7 +59,7 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Edit" width="171" height="171"/>
-        <image name="Empty" width="160" height="160"/>
+        <image name="Radio_Off" width="11" height="11"/>
+        <image name="Radio_On" width="11" height="11"/>
     </resources>
 </document>
