--- a/HollerUp/HollerUp/XIBS/CalenderView/CalenderView.xib
+++ b/HollerUp/HollerUp/XIBS/CalenderView/CalenderView.xib
@@ -64,20 +64,23 @@
                             </constraints>
                         </stackView>
                         <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Dbr-vg-hT9">
-                            <rect key="frame" x="212" y="0.0" width="155" height="50"/>
+                            <rect key="frame" x="247" y="0.0" width="120" height="50"/>
                             <subviews>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3k-wj-WKv">
-                                    <rect key="frame" x="0.0" y="0.0" width="48.5" height="50"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o3k-wj-WKv">
+                                    <rect key="frame" x="0.0" y="0.0" width="36.5" height="50"/>
+                                    <state key="normal" image="Synch"/>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Oz-Hc-04c">
-                                    <rect key="frame" x="53.5" y="0.0" width="48" height="50"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Oz-Hc-04c">
+                                    <rect key="frame" x="41.5" y="0.0" width="37" height="50"/>
+                                    <state key="normal" image="Serach"/>
                                 </button>
-                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="detailDisclosure" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-uZ-6ja">
-                                    <rect key="frame" x="106.5" y="0.0" width="48.5" height="50"/>
+                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fVR-uZ-6ja">
+                                    <rect key="frame" x="83.5" y="0.0" width="36.5" height="50"/>
+                                    <state key="normal" image="Plus"/>
                                 </button>
                             </subviews>
                             <constraints>
-                                <constraint firstAttribute="width" constant="155" id="0Ca-pP-jIw"/>
+                                <constraint firstAttribute="width" constant="120" id="0Ca-pP-jIw"/>
                             </constraints>
                         </stackView>
                     </subviews>
@@ -314,6 +317,9 @@
         </view>
     </objects>
     <resources>
+        <image name="Plus" width="17" height="17"/>
+        <image name="Serach" width="18" height="18"/>
+        <image name="Synch" width="14" height="19"/>
         <image name="leftArrow" width="35" height="35"/>
         <image name="rightArrow" width="35" height="35"/>
     </resources>
